# give-care

./: .gitignore  AGENTS.md  Dockerfile  init-git.bat  init-git.sh  koyeb.yaml  render.yaml
.agents/skills/diagnose/: SKILL.md
.agents/skills/handoff/: SKILL.md
.agents/skills/init-project/: SKILL.md
.agents/skills/ms-email/: SKILL.md
.agents/skills/ms-microsoft/: SKILL.md
.agents/skills/restart-site/: SKILL.md
.agents/skills/save-my-work/: SKILL.md
.agents/skills/save-my-work/scripts/: check-repo-private.ps1  (+1 more)
.clinerules/: requirement_tracking.md
.github/workflows/: ci.yml  deploy.yml
backend/: database.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
backend/routers/: auth.py  dashboard.py  events.py  photos.py  volunteers.py
docs/: requirements.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx
frontend/src/api/: client.ts  index.ts
frontend/src/components/: ConfirmDialog.tsx  DonationModal.tsx  ErrorBoundary.tsx  LoadingSkeleton.tsx
frontend/src/context/: AuthContext.tsx  ToastContext.tsx
frontend/src/pages/: AboutPage.tsx  AdminPage.tsx  DashboardPage.tsx  EventDetailPage.tsx  EventsPage.tsx  LoginPage.tsx  PhotoGalleryPage.tsx  ProfilePage.tsx  RegisterPage.tsx  VolunteerPage.tsx
frontend/src/styles/: global.css
frontend/src/types/: index.ts
frontend/src/utils/: imageSrc.ts
scripts/: start-all.bat  start-all.sh  start-backend.bat  start-backend.sh  start-frontend.bat  start-frontend.sh  status.bat  status.sh  stop-all.bat  stop-all.sh
